src/objects/Mobile_User__c.object
<CustomObject>
    <description>Contains information about a Field Officer&apos;s session in Salesforce</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Id of the Field Officer</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mobile Users</relationshipLabel>
        <relationshipName>Mobile_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <description>Timestamp of the last time the mobile app requested any service from Salesforce using the FO&apos;s credentials.
This field is also used to estabilish if this session has expired.</description>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>Mobile_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <description>Timestamp of the last time the mobile app logged in to Salesforce with the FO&apos;s credentials.</description>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Token__c</fullName>
        <label>Session Token</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Mobile User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Username__c</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MU-{0000}</displayFormat>
        <label>Mobile User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_With_Only_1_Mobile_User</fullName>
        <active>true</active>
        <description>Validaste that when creating a mobile user, the contact does not have any mobile user previously asociated.</description>
        <errorConditionFormula>AND(ISNEW(), Contact__r.IsMobileUser__c  &gt; 0)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact cannot have more than 1 mobile user</errorMessage>
    </validationRules>
</CustomObject>